# BEaST

./: .gitignore  CMakeLists.txt  ParseArgv.c  ParseArgv.h  README  README.library  alloc.c  array_alloc.h  basic.h  beast.h  beast_lib.c  config.h.cmake  distance_patch.c  label.c  label.h  minc2nifti.c  mincbeast.c  mincio.c  mincio.h  moments.c  niftiio.c  niftiio.h  nlm_utils.c  nlmfilter.c  nlmseg.h  nlmsegFuzzy.c
conf/: default.1mm.conf  default.2mm.conf  default.4mm.conf
free_database/: default.2mm.conf  default.conf  intersection_mask.mnc  library.masks.1mm  library.masks.2mm  library.masks.4mm  library.stx.1mm  library.stx.2mm  library.stx.4mm  margin_mask.mnc  union_mask.mnc
free_database/ICBM_pol/masks/2mm/: 00100.mnc  00100_flip.mnc  00101.mnc  00101_flip.mnc  00102.mnc  00102_flip.mnc  00103.mnc  00103_flip.mnc  00106.mnc  00106_flip.mnc  00107.mnc  00107_flip.mnc  00108.mnc  00108_flip.mnc  00109.mnc  00109_flip.mnc  00112.mnc  00112_flip.mnc  00113.mnc  00113_flip.mnc
free_database/ICBM_pol/masks/4mm/: 00100.mnc  00100_flip.mnc  00101.mnc  00101_flip.mnc  00102.mnc  00102_flip.mnc  00103.mnc  00103_flip.mnc  00106.mnc  00106_flip.mnc  00107.mnc  00107_flip.mnc  00108.mnc  00108_flip.mnc  00109.mnc  00109_flip.mnc  00112.mnc  00112_flip.mnc  00113.mnc  00113_flip.mnc
free_database/ICBM_pol/stx/2mm/: 00100.mnc  00100_flip.mnc  00101.mnc  00101_flip.mnc  00102.mnc  00102_flip.mnc  00103.mnc  00103_flip.mnc  00106.mnc  00106_flip.mnc  00107.mnc  00107_flip.mnc  00108.mnc  00108_flip.mnc  00109.mnc  00109_flip.mnc  00112.mnc  00112_flip.mnc  00113.mnc  00113_flip.mnc
free_database/ICBM_pol/stx/4mm/: 00100.mnc  00100_flip.mnc  00101.mnc  00101_flip.mnc  00102.mnc  00102_flip.mnc  00103.mnc  00103_flip.mnc  00106.mnc  00106_flip.mnc  00107.mnc  00107_flip.mnc  00108.mnc  00108_flip.mnc  00109.mnc  00109_flip.mnc  00112.mnc  00112_flip.mnc  00113.mnc  00113_flip.mnc
scripts/: CMakeLists.txt  beast_normalize  beast_prepareADNIlib
